Dummy_Package_for_scratch_org/main/default/objects/Result__c/fields/ApexCallback__c.field-meta.xml
<CustomField>
    <fullName>ApexCallback__c</fullName>
    <description>This field is updated automatically by Copado.</description>
    <inlineHelpText>This field is updated automatically by Copado.</inlineHelpText>
    <label>Apex Callback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>