Dummy_Package_for_scratch_org/main/default/objects/Result__c/fields/Custom_Function_Used_Credits__c.field-meta.xml
<CustomField>
    <fullName>Custom_Function_Used_Credits__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Custom Function Used Credits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>