Dummy_Package_for_scratch_org/main/default/objects/Result__c/fields/Deployment__c.field-meta.xml
<CustomField>
    <fullName>Deployment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to track multi-step deployment overall results.</description>
    <inlineHelpText>Used to track multi-step deployment overall results.</inlineHelpText>
    <label>Deployment</label>
    <referenceTo>Deployment__c</referenceTo>
    <relationshipLabel>Results</relationshipLabel>
    <relationshipName>Results</relationshipName>
    <type>Lookup</type>
</CustomField>