Dummy_Package_for_scratch_org/main/default/objects/Result__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>Date time when the job ended.</description>
    <inlineHelpText>Date time when the job ended.</inlineHelpText>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>