Dummy_Package_for_scratch_org/main/default/objects/Result__c/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Copado Function that triggered this result.</inlineHelpText>
    <label>Function</label>
    <referenceTo>Function__c</referenceTo>
    <relationshipLabel>Results</relationshipLabel>
    <relationshipName>Results</relationshipName>
    <type>Lookup</type>
</CustomField>