Dummy_Package_for_scratch_org/main/default/objects/Result__c/fields/Function_Worker_Size__c.field-meta.xml
<CustomField>
    <fullName>Function_Worker_Size__c</fullName>
    <label>Function Worker Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>