Dummy_Package_for_scratch_org/main/default/objects/Result__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <label>Job Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>