Dummy_Package_for_scratch_org/main/default/objects/Result__c/fields/JobStep__c.field-meta.xml
<CustomField>
    <fullName>JobStep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Step</label>
    <referenceTo>JobStep__c</referenceTo>
    <relationshipLabel>Results</relationshipLabel>
    <relationshipName>Results</relationshipName>
    <type>Lookup</type>
</CustomField>