Dummy_Package_for_scratch_org/main/default/objects/Result__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>Link to open more information about the results.</description>
    <inlineHelpText>Link to open more information about the results.</inlineHelpText>
    <label>Link</label>
    <type>Url</type>
</CustomField>