Dummy_Package_for_scratch_org/main/default/objects/Result__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <label>ParentId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>