Dummy_Package_for_scratch_org/main/default/objects/Result__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to track job results triggered from promotion events.</description>
    <inlineHelpText>Used to track job results triggered from promotion events.</inlineHelpText>
    <label>Promotion</label>
    <referenceTo>Promotion__c</referenceTo>
    <relationshipLabel>Results</relationshipLabel>
    <relationshipName>Results</relationshipName>
    <type>Lookup</type>
</CustomField>