Dummy_Package_for_scratch_org/main/default/objects/Result__c/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <label>Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>