Dummy_Package_for_scratch_org/main/default/objects/Result__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User story that originated the result.</description>
    <inlineHelpText>User story that originated the result.</inlineHelpText>
    <label>User Story</label>
    <referenceTo>User_Story__c</referenceTo>
    <relationshipLabel>Result</relationshipLabel>
    <relationshipName>Result</relationshipName>
    <type>Lookup</type>
</CustomField>