Dummy_Package_for_scratch_org/main/default/objects/Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Link__c</columns>
    <columns>Description__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Error_Code__c</columns>
    <columns>Job_Id__c</columns>
    <columns>User_Story__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>